--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,27 @@ body {
   padding: 0;
   margin: 0;
 }
+
 /*Homepage*/
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     height: 100vh;
-    padding: 40px 20px;
-    box-sizing: border-box;
-    background: #fff;
-    margin:0; 
+    overflow: hidden;
+    position: relative;
+    padding: 0;
 }
 
-.logo {
-    display: block;
-    margin: 0 auto 5px auto;
-    width: 120px;
-    height: auto;
+.smdc-image {
+  width: 100%;
+  margin-top: 70px;
 }
 
-.intro {
-    align-self: flex-start;
-    margin: 0 0 20px;
-    font-size: 2rem;
-    font-weight: bold;
+#home-description {
+    width: 230px;
+    position: absolute;
+    right: 0;
+    top: 35%;
     color: blue;
+    font-size: 0.9rem;
 }
 
 .userImage {
@@ -39,24 +35,27 @@ body {
 }
 
 .userImage img {
-    width: 480px;
+    width: 380px;
     height: auto;
     object-fit: cover;
+    margin-left: -240px;
+    margin-top: -130px;
+   
 }
 
-.continue {
+#home-continue {
     position: absolute;
     left: 50%;
     bottom: 10%;
     transform: translateX(-50%);
-    background-color: rgba(117, 117, 117, 0.5);
+    background-color: blue;
     border: none;
     border-radius: 15px;
     color: #fff;
     font-size: 1.1rem; 
     font-weight: 700; 
     cursor: pointer;
-    padding: 5px 25px;
+    padding: 6px 35px;
     text-decoration: none;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);;
     transition: color 0.2s ease;
@@ -73,6 +72,8 @@ body {
   align-items: center;
   padding: 0;
   margin:0; 
+  background-image: url(assets/BG.png);
+  overflow: hidden;
 }
 
 .info-intro {
@@ -81,17 +82,24 @@ body {
     align-items: center;
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: #007bff;
     padding-bottom: 20px;
     width: 100%;
+    border-bottom: 5px solid black;
+}
+
+.info-profilePic-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin-top: 50px;
 }
 
 .info-profilePic {
-    width: 100%;
-    height: 200px; 
-    object-fit: contain; 
-    object-position: center; 
-    border-radius: 10px; 
+  width: 200px;
+  height: auto;
+  margin-left: 30px;
 }
 
 .info-name {
@@ -102,17 +110,18 @@ body {
 }
 
 
-.info-desc {
-    font-size: 1rem;
-    max-width: 400px;
-    margin-bottom: 20px;
-    color: #fff;
+.info-accr {
+  color: #fff;
+  font-size: 0.8rem;
+  font-size: bold;
+  line-height: 20px;
 }
 
 
 .info-contacts {
     display: flex;
-    gap: 40px;
+    justify-content: space-between;
+    width: 250px;
 }
 
 .info-contacts button {
@@ -138,9 +147,10 @@ body {
     display: flex;
     flex-direction: column; 
     gap: 20px; 
-    align-items: flex-start;
+    align-items: center;
     margin-top: 20px;
     margin-bottom: 40px;
+    width: 100%;
 }
 
 
@@ -149,9 +159,9 @@ body {
     flex-direction: row; 
     align-items: center;
     gap: 15px; 
-    min-width: 80%;
-    background-color: rgba(117, 117, 117, 0.5);
-    padding: 5px 50px;
+    width: 80%;
+    background-color: white;
+    padding: 5px 15px;
     border-radius: 30px;
     
 }
@@ -195,61 +205,25 @@ body {
     font-size: 18px;
 }
 
-/* Small phones (≤ 480px) */
-@media (max-width: 480px) {
-  .container {
-    padding: 20px;
-  }
+@media (max-width: 400px) {
+    #home-description {
+        top: 35%;
+    }
 
-  .intro {
-    font-size: 1.5rem;
-    text-align: center;
-  }
+    .smdc-image {
+      margin-top: 100px;
+    }
 
-  .userImage img {
-    width: 100%;
-  }
+    .userImage img {
+      width: 350px;
+    }
+    
 
-  .continue {
-    font-size: 1rem;
-    padding: 5px 15px;
-  }
+    #home-continue {
+      bottom: 10%;
+    }
 
-  .info-name{
-    margin: 10px;
-  }
-
-  .info-desc{
-    margin: 10px 20px;
-  }
-
-  .info-profilePic {
-    height: 150px;
-  }
-
-  .info-contacts {
-    gap: 20px;
-    margin-top: 10px;
-  }
-
-  #links {
-    flex-direction: row;
-    padding: 5px 15px;
-    gap: 10px;
-    min-width: 90%;
-  }
-
-  #links img {
-    width: 30px;
-    height: 30px;
-  }
-
-  #links p {
-    font-size: 0.9rem;
-  }
-
-  #links button {
-    width: 35px;
-    height: 35px;
-  }
+    #links {
+      width: 80%;
+    }
 }
