--- a/src/index.css
+++ b/src/index.css
@@ -206,25 +206,24 @@ body {
 }
 
 @media (max-width: 400px) {
-    #home-description {
-        top: 35%;
-    }
-
-    .smdc-image {
-      margin-top: 100px;
+   #home-description {
+        top: 40%;
+        font-size: 0.8rem;
+        width: 200px;
     }
 
     .userImage img {
-      width: 350px;
+      margin-top: -80px;
+      margin-left: -170px;
+      width: 300px;
     }
-    
+
+    .smdc-image {
+      margin-top: 150px;
+    }
 
     #home-continue {
-      bottom: 10%;
-    }
-
-    #links {
-      width: 80%;
+      padding: 5px 15px;
     }
 }
 
